[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["tools"]
description = "rangeset that can merge overlap"
edition = "2021"
keywords = ["overlap", "range", "merge"]
license = "Apache-2.0"
name = "merged_range"
readme = "README.md"
repository = "https://github.com/datenlord/merged_range"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy-utilities = "0.2.0"
